Need to finish negative tests and integration tests for map command